syntax = "proto3";

package lain.viz;

// Only id and value; kind deferred to later iteration.
message CardRef {
  string id = 1;
  bytes value = 2;  // JSON-serialized
}

// Code is data: unified map of slot -> value. Slots: "code", "::above", "::below", "::this"
message CompileRequest {
  map<string, CardRef> data = 1;
}

// Strongest value decomposed per Propogator traced-timestamp system.
// Interface: source_id = cell name. Dataflow: source_id = cell_id.
message StrongestValueLayer {
  bytes value = 1;       // JSON-serialized base value
  int64 timestamp = 2;
  string source_id = 3;  // cell_id in dataflow; cell name at interface
}

// Network update: real-time I/O with flexible visualization (more than visualization).
message NetworkUpdate {
  string cell_id = 1;
  string name = 2;       // cell name for interface display
  StrongestValueLayer strongest_value = 3;
}

// Only success or error_message; NetworkStream provides all network updates.
message CompileResponse {
  bool success = 1;
  string error_message = 2;  // empty when success
}

// Delta from frontend: slots to set (key -> CardRef) and keys to remove.
message CardsDelta {
  map<string, CardRef> slots = 1;  // set/update; key present = set
  repeated string remove = 2;      // keys to remove (e.g. neighbor detached)
}

// Backend -> frontend: heartbeat (connection) or card update (id, slot, value).
message Heartbeat {}
message CardUpdate {
  string card_id = 1;
  string slot = 2;     // e.g. "::above", "code", "::this"
  CardRef ref = 3;     // empty/missing = remove card for this slot
}
message ServerMessage {
  oneof kind {
    Heartbeat heartbeat = 1;
    CardUpdate card_update = 2;
  }
}

// Browser-compatible: one request (no client streaming). Client sends session_id + initial state.
message OpenSessionRequest {
  string session_id = 1;          // client-generated; used for PushDeltas/CardBuild
  CompileRequest initial_data = 2; // optional initial slot map
}

// Unary: apply delta to session. Browser can call this; no client stream needed.
message PushDeltasRequest {
  string session_id = 1;
  CardsDelta delta = 2;
}

// Manual build trigger for one card in a session.
message CardBuildRequest {
  string session_id = 1;
  string card_id = 2;
}

message CardBuildResponse {
  bool success = 1;
  string error_message = 2;
}

message Empty {}

service LainViz {
  rpc Compile(CompileRequest) returns (CompileResponse);
  rpc NetworkStream(CompileRequest) returns (stream NetworkUpdate);
  rpc Session(stream CardsDelta) returns (stream ServerMessage);
  rpc OpenSession(OpenSessionRequest) returns (stream ServerMessage);
  rpc PushDeltas(PushDeltasRequest) returns (Empty);
  rpc CardBuild(CardBuildRequest) returns (CardBuildResponse);
}
